initialised Library app

--- a/templates/attendance/student_records.html
+++ b/templates/attendance/student_records.html
@@ -1,17 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>Check-In Students</h2>
+    <h2>Students Checked In on {{ today }}</h2>
+    
     <ul>
-        {% for student in students %}
+        {% for record in checked_in_students %}
             <li>
-                {{ student.username }}
-                <a href="{% url 'attendance:teacher_check_in_student' student_id=student.id %}">
-                    <button type="button">Check In</button>
-                </a>
+                {{ record.user.username }} - Checked in at {{ record.clock_in_time }}
             </li>
         {% empty %}
-            <li>No students available for check-in.</li>
+            <li>No students are checked in today.</li>
         {% endfor %}
     </ul>
 {% endblock %}
