--- a/templates/aside.html
+++ b/templates/aside.html
@@ -9,14 +9,14 @@
 
 <div id="side-nav">
     <div class="main-menu">
-        <div class="top-side text-center py-4" style="background-image: url({% static 'img/elimu portal.png' %});">
+        <div class="top-side text-center py-4" style="background-image: url({% static 'img/elimu portal.png' %})">
             <div class="desktop-hide">
                 <div class="toggle-btn" onclick="toggleSidebar()">
                     <i class="fas fa-times"></i>
                 </div>
             </div>
             <a href="/">
-                <img src="{% static 'img/elimu portal.png' %}" width="140px" alt="Elimu LMS">
+                <img src="{% static 'img/elimu portal.png' %}" width="110px" alt="LogoLMS">
             </a>
             <p class="text-orange">
                 <mark>
@@ -25,39 +25,36 @@
                 </mark>
             </p>
         </div>
+        {% url 'home' as hom %}
+        {% url 'dashboard' as dash %}
+        {% url 'profile' as prof %}
+        {% url 'teacher_list' as lec %}
+        {% url 'student_list' as stu %}
+        {% url 'course_allocation_view' as cav %}
+        {% url 'programs' as pro %}
+        {% url 'session_list' as sess %}
+        {% url 'semester_list' as sem %}
+        {% url 'add_score' as ascore %}
+        {% url 'grade_results' as vr %}
+        {% url 'ass_results' as ar %}
+        {% url 'course_registration' as cr %}
+        {% url 'edit_profile' as ep %}
+        {% url 'change_password' as cp %}
+        {% url 'quiz_progress' as qpr %}
+        {% url 'quiz_marking' as qce %}
+        {% url 'user_course_list' as ucl %}
+        {% url 'admin_panel' as admin_p %}
+        {% url 'library' as lib %}
+        {% url 'attendance:clock_in_out_records' as clock_in_out_records %}
+        {% url 'attendance:clock_out' as clock_out %}
+        {% url 'attendance:clock_in' as clock_in %}
+        {% url 'fees:fee_payment' as fee_payment_url %}
 
-        <!-- Navigation Links -->
+        <!-- Transportation Links -->
+        {% url 'bus_list' as bus_list %}
+        {% url 'route_list' as route_list %}
+        {% url 'student_pickup_list' as student_pickup_list %}
         <ul>
-            {% url 'home' as hom %}
-            {% url 'dashboard' as dash %}
-            {% url 'profile' as prof %}
-            {% url 'teacher_list' as lec %}
-            {% url 'student_list' as stu %}
-            {% url 'course_allocation_view' as cav %}
-            {% url 'programs' as pro %}
-            {% url 'session_list' as sess %}
-            {% url 'semester_list' as sem %}
-            {% url 'add_score' as ascore %}
-            {% url 'grade_results' as vr %}
-            {% url 'ass_results' as ar %}
-            {% url 'course_registration' as cr %}
-            {% url 'edit_profile' as ep %}
-            {% url 'change_password' as cp %}
-            {% url 'quiz_progress' as qpr %}
-            {% url 'quiz_marking' as qce %}
-            {% url 'user_course_list' as ucl %}
-            {% url 'admin_panel' as admin_p %}
-            {% url 'attendance:clock_in_out_records' as clock_in_out_records %}
-            {% url 'attendance:clock_out' as clock_out %}
-            {% url 'attendance:clock_in' as clock_in %}
-
-            {% url 'fees:fee_payment' as fee_payment_url %}
-
-            <!-- Transportation Links -->
-            {% url 'bus_list' as bus_list %}
-            {% url 'route_list' as route_list %}
-            {% url 'student_pickup_list' as student_pickup_list %}
-
             {% if request.user.is_superuser %}
             <li class="{% if request.path == dash %}active{% endif %}">
                 <a href="{% url 'dashboard' %}"><i class="fas fa-tachometer-alt"></i>Dashboard</a>
@@ -84,12 +81,12 @@
 
             {% if request.user.is_teacher or request.user.is_student %}
             <li class="{% if request.path == ucl %}active{% endif %}">
-                <a href="{% url 'user_course_list' %}"><i class="fas fa-book"></i>My Subjects</a>
+                <a href="{% url 'user_course_list' %}"><i class="fas fa-book"></i>My Courses</a>
             </li>
             {% endif %}
 
             <li class="{% if request.path == pro %}active{% endif %}">
-                <a href="{% url 'programs' %}"><i class="fas fa-book-open"></i>Programs & Subjects</a>
+                <a href="{% url 'programs' %}"><i class="fas fa-book-open"></i>Programs & Courses</a>
             </li>
 
             {% if request.user.is_superuser or request.user.is_teacher %}
@@ -112,39 +109,20 @@
                 <a href="{% url 'semester_list' %}"><i class="fas fa-calendar-alt"></i>Manage Semester</a>
             </li>
             {% endif %}
-            <!-- Sidebar -->
-            <ul class="sidebar-menu">
-                {% if request.user.is_superuser %}
-                <li class="{% if request.path == '/attendance/records/' %}active{% endif %}">
-                    <a href="{% url 'attendance:clock_in_out_records' %}"><i class="fas fa-history"></i> All Clock
-                        In/Out Records</a>
-                </li>
-                <li class="{% if request.path == '/attendance/teacher_records/' %}active{% endif %}">
-                    <a href="{% url 'attendance:teacher_records' %}"><i class="fas fa-history"></i> Teacher Clock In/Out
-                        Records</a>
-                </li>
-                <li class="{% if request.path == '/attendance/student_records/' %}active{% endif %}">
-                    <a href="{% url 'attendance:student_records' %}"><i class="fas fa-history"></i> Student Clock In/Out
-                        Records</a>
-                </li>
-                {% endif %}
-                {% if request.user.is_teacher %}
-                <li class="{% if request.path == '/attendance/clock-status/' %}active{% endif %}">
-                    <a href="{% url 'attendance:clock_status' %}">
-                        <i class="fas fa-history"></i> Attendance (Today)
-                    </a>
-                </li>
-
-                <li class="{% if request.path == '/attendance/student-check-in/' %}active{% endif %}">
-                    <a href="{% url 'attendance:student_check_in_list' %}">
-                        <i class="fas fa-check"></i> Student Check-In
-                    </a>
-                </li>
-                {% endif %}
-
-
-            </ul>
-
+            <!-- Library Access -->
+            {% if request.user.is_superuser %}
+            <li class="{% if request.path == lib %}active{% endif %}">
+                <a href="{% url 'library' %}"><i class="fas fa-book"></i>Manage E-books</a>
+            </li>
+            {% elif request.user.is_teacher %}
+            <li class="{% if request.path == lib %}active{% endif %}">
+                <a href="{% url 'library' %}"><i class="fas fa-book"></i>Add & View E-books</a>
+            </li>
+            {% elif request.user.is_student %}
+            <li class="{% if request.path == lib %}active{% endif %}">
+                <a href="{% url 'library' %}"><i class="fas fa-book"></i>View E-books</a>
+            </li>
+            {% endif %}
 
             {% if request.user.is_teacher %}
             <li class="{% if request.path == ascore %}active{% endif %}">
@@ -160,23 +138,15 @@
                 <a href="{% url 'grade_results' %}"><i class="fa fa-spell-check"></i>Grade Results</a>
             </li>
             <li class="{% if request.path == ar %}active{% endif %}">
-                <a href="{% url 'ass_results' %}"><i class="fa fa-list-ol"></i>Assessment Results</a>
+                <a href="{% url 'ass_results' %}"><i class="fa fa-list-ol"></i> Assesment Results</a>
             </li>
             <li class="{% if request.path == cr %}active{% endif %}">
                 <a href="{% url 'course_registration' %}"><i class="fas fa-plus"></i>Add &amp; Drop Course</a>
+
+            <li class="{% if request.path == lib %}active{% endif %}">
+                <a href="{% url 'library' %}"><i class="fa fa-list-ol"></i>E-books</a>
             </li>
             {% endif %}
-
-            {% if request.user.is_superuser or request.user.is_student %}
-
-            <br />
-            <p class="ml-3">&RightArrow; Payments</p>
-            <li class="{% if request.path == fee_payment_url %}active{% endif %}">
-                <a href="{{ fee_payment_url }}"><i class="fas fa-dollar-sign"></i>Fee Payment</a>
-            </li>
-
-            {% endif %}
-
 
             <br />
             <p class="ml-3">&Rightarrow; Message</p>
@@ -192,12 +162,12 @@
                         <span>Inbox</span>
                         {% if unread_count > 0 %}
                         <span style="
-                                background-color: #dc3545; 
-                                color: white; 
-                                padding: 0.25rem 0.5rem; 
-                                border-radius: 1rem; 
-                                font-size: 0.75rem; 
-                                margin-left: 0.5rem;">
+                                    background-color: #dc3545; 
+                                    color: white; 
+                                    padding: 0.25rem 0.5rem; 
+                                    border-radius: 1rem; 
+                                    font-size: 0.75rem; 
+                                    margin-left: 0.5rem;">
                             {{ unread_count }}
                         </span>
                         {% endif %}
@@ -209,15 +179,55 @@
                     </a>
                 </li>
             </ul>
+            {% if request.user.is_superuser or request.user.is_student %}
+
+            <br />
+            <p class="ml-3">&RightArrow; Payments</p>
+            <li class="{% if request.path == fee_payment_url %}active{% endif %}">
+                <a href="{{ fee_payment_url }}"><i class="fas fa-dollar-sign"></i>Fee Payment</a>
+            </li>
+
+            {% endif %}
 
 
 
+
+            <br />
+            <p class="ml-3">&RightArrow; Attendance</p>
 
             {% if request.user.is_superuser %}
-            <br />
-            <p class="ml-3">&RightArrow; Transportation</p>
+            <li class="{% if request.path == '/attendance/records/' %}active{% endif %}">
+                <a href="{% url 'attendance:clock_in_out_records' %}"><i class="fas fa-history"></i> All Clock
+                    In/Out Records</a>
+            </li>
+            <li class="{% if request.path == '/attendance/teacher_records/' %}active{% endif %}">
+                <a href="{% url 'attendance:teacher_records' %}"><i class="fas fa-history"></i> Teacher Clock In/Out
+                    Records</a>
+            </li>
+            <li class="{% if request.path == '/attendance/student_records/' %}active{% endif %}">
+                <a href="{% url 'attendance:student_records' %}"><i class="fas fa-history"></i> Student Clock In/Out
+                    Records</a>
+            </li>
+            {% endif %}
+            {% if request.user.is_teacher %}
+            <li class="{% if request.path == '/attendance/clock-status/' %}active{% endif %}">
+                <a href="{% url 'attendance:clock_status' %}">
+                    <i class="fas fa-history"></i> Attendance (Today)
+                </a>
+            </li>
 
-            <!-- Admin-specific links -->
+            <li class="{% if request.path == '/attendance/student-check-in/' %}active{% endif %}">
+                <a href="{% url 'attendance:student_check_in_list' %}">
+                    <i class="fas fa-check"></i> Student Check-In
+                </a>
+
+                {% endif %}
+
+                {% if request.user.is_superuser %}
+                <br />
+                <p class="ml-3">&RightArrow; Transportation</p>
+
+                <!-- Admin-specific links -->
             <li class="{% if request.path == '/transportation/buses/create/' %}active{% endif %}">
                 <a href="{% url 'transportation:create_bus' %}">
                     <i class="fas fa-plus-circle"></i> Create Bus
@@ -256,7 +266,6 @@
                     <i class="fas fa-user"></i> Student Pickups
                 </a>
             </li>
-
             <!-- Student-specific links -->
             {% if request.user.is_student %}
             <li class="{% if request.path == '/transportation/transport/create/' %}active{% endif %}">
@@ -265,39 +274,34 @@
                 </a>
             </li>
             {% endif %}
-
+            <br />
+            <p class="ml-3">&RightArrow; Health</p>
             <ul>
-
-
-
-                <ul>
-                    <li><a href="{% url 'medical_record_list' %}">Medical Records</a></li>
-                    <li><a href="{% url 'wellness_program_list' %}">Wellness Programs</a></li>
-                </ul>
-                
-
-                <br />
-                <p class="ml-3">&RightArrow; Others</p>
-                <li class="{% if request.path == ep %}active{% endif %}">
-                    <a href="{% url 'edit_profile' %}"><i class="fas fa-cogs"></i>Account Setting</a>
-                </li>
-                <li class="{% if request.path == cp %}active{% endif %}">
-                    <a href="{% url 'change_password' %}"><i class="fas fa-key"></i>Change Password</a>
-                </li>
+                <li><a href="{% url 'medical_record_list' %}">Medical Records</a></li>
+                <li><a href="{% url 'wellness_program_list' %}">Wellness Programs</a></li>
             </ul>
+
+            <br />
+            <p class="ml-3">&RightArrow; Others</p>
+            <li class="{% if request.path == ep %}active{% endif %}">
+                <a href="{% url 'edit_profile' %}"><i class="fas fa-cogs"></i>Account Setting</a>
+            </li>
+            <li class="{% if request.path == cp %}active{% endif %}">
+                <a href="{% url 'change_password' %}"><i class="fas fa-key"></i>Change Password</a>
+            </li>
+        </ul>
     </div>
 
     <footer class="card-footer mt-5 pt-3 pb-5 px-2">
         <div class="col-12">
             <p class="small m-0">
-                Read our <a href="#">Privacy</a> and <a href="#">Terms of use.</a>
-                <br />Great Wayne &copy;
+                Read our <a href="#"> Privacy </a> and <a href="#"> Terms of use. </a>
+                <br />Django LMS &copy;
                 <script>document.write(new Date().getFullYear());</script>
                 <br />
             </p>
-            <a href="https://github.com/GreatWayne8/djjango_schoo_ms.git" class="btn btn-sm btn-dark mx-auto"
-                target="_blank">
-                ⭐️ Star my Project
+            <a href="https://github.com/adilmohak/django-lms" class="btn btn-sm btn-dark mx-auto" target="_blank">
+                ⭐️ Star This Project
             </a>
         </div>
     </footer>
