--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -213,7 +213,7 @@
 		<div class="card-count p-3">
 			<h3><i class="fas fa-users bg-light-red"></i></h3>
 			<div class="text-right">
-				Librarians
+				Driver
 				<h2>300</h2>
 			</div>
 		</div>
@@ -236,7 +236,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-md-3 mb-3 px-2">
+	<!-- <div class="col-md-3 mb-3 px-2">
 		<div class="card-count p-3">
 			<h3><i class="fas fa-users bg-light-aqua"></i></h3>
 			<div class="text-right">
@@ -245,7 +245,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
 <div class="row px-2">
 	<div class="col-md-6 p-2">
